# XPlatform

./: .gitignore  AndroidMain.cpp  Application.cpp  Application.h  ApplicationListener.cpp  ApplicationListener.h  Asset.cpp  Asset.h  AssetManager.h  BatchSprite.cpp  BatchSprite.h  Build.bat  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Component.cpp  Component.h  ConvertToUTF8.ps1  Font.h  GUIObject.h  IDrawable.h  IGL.h  IGraphics.h  ILogger.h  IRenderer.h  ISocket.h  InitializeOnLoadScene.cpp  InitializeOnLoadScene.h  InitializeScene.cpp  InitializeScene.h  Light.h  MainScene.cpp  MainScene.h  Material.cpp  Material.h  MathHelper.cpp  MathHelper.h  Matrix16.cpp  Matrix16.h  (+63 more)
Native/Android/app/: build.gradle
Native/Android/app/src/main/: AndroidManifest.xml
Native/Android/app/src/main/cpp/: AndroidOut.cpp  AndroidOut.h  CMakeLists.txt  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  main.cpp
Native/Android/gradle/wrapper/: gradle-wrapper.properties
Native/MyApplication/: settings.gradle
Native/MyApplication/app/: build.gradle
Native/MyApplication/app/src/main/: AndroidManifest.xml
Native/MyApplication/gradle/wrapper/: gradle-wrapper.properties
Platform/Android/: settings.gradle
Platform/Android/app/: build.gradle
Platform/Android/app/src/main/: AndroidManifest.xml
Platform/Android/gradle/wrapper/: gradle-wrapper.properties
Platform/MyApplication/app/: build.gradle
Platform/MyApplication/gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
